# fedi

./: .clippy.toml  .gitignore  .prettierignore  .rustfmt.toml  .treefmt.toml  CODEOWNERS  Cargo.toml  HACKING.md  LICENSE  README.md  SECURITY.md  documentation-audit-report.md  flake.nix  justfile  justfile.fedi
.cargo/: config.toml
.claude/skills/: android-emulator
.config/: nextest.toml  semgrep.yaml
.config/fakeroot/: current
.config/flakebox/: id  shellHook.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.greptile/: config.json
bridge/: .gitignore  README.md  debugging.md
bridge/fedi-ffi/: Cargo.toml  build.rs  uniffi.toml
bridge/fedi-ffi/src/: api.rs  bridge.rs  constants.rs  db.rs  device_registration.rs  error.rs  event.rs  features.rs  fedi.udl  fedi_fee.rs  ffi.rs  guardinito_client.rs  lib.rs  logging.rs  matrix.rs  matrix_tests.rs  multi.rs  observable.rs  remote.rs  rpc.rs  serde.rs  social.rs  storage.rs  test_device.rs  translate.rs  types.rs  utils.rs
bridge/fedi-ffi/src/community/: mod.rs
bridge/fedi-ffi/src/federation/: federation_sm.rs  federations_locker.rs  mod.rs
bridge/fedi-ffi/src/federation/federation_v2/: backup_service.rs  client.rs  db.rs  mod.rs  spv2_sweeper_service.rs  stability_pool_sweeper_service.rs
bridge/fedi-ffi/src/federation_v2/: backup_service.rs  client.rs  db.rs  dev.rs  ln_gateway_service.rs  meta.rs  mod.rs  stability_pool_sweeper_service.rs
bridge/fedi-ffi/src/matrix/: multispend.rs  rescanner.rs  types.rs
bridge/fedi-ffi/src/matrix/multispend/: db.rs
bridge/fedi-ffi/src/rpc/: tests.rs
bridge/fedi-ffi/src/rpc/tests/: matrix.rs  multispend_tests.rs  nostr_tests.rs  sp_transfer_tests.rs  utils.rs
bridge/fedi-wasm/: Cargo.toml
bridge/fedi-wasm/src/: db.rs  lib.rs  logging.rs  storage.rs
crates/api-types/: Cargo.toml
crates/api-types/src/: fedi_gift.rs  fee_schedule.rs  invoice_generator.rs  lib.rs
crates/api-types/src/device_control/: mod.rs  request.rs  response.rs
crates/bridge/: Cargo.toml
crates/bridge/src/: bg_matrix.rs  full.rs  lib.rs  onboarding.rs  providers.rs
crates/bridge/src/onboarding/: social_recovery.rs
crates/bug-report/: Cargo.toml
crates/bug-report/src/: db_dump.rs  lib.rs  reused_ecash_proofs.rs
crates/communities/: Cargo.toml
crates/communities/src/: lib.rs
crates/debug-tools/: Cargo.toml  README.md
crates/debug-tools/src/: main.rs
crates/device-registration/: Cargo.toml
crates/device-registration/src/: lib.rs
crates/federations/: Cargo.toml
crates/federations/src/: federation_sm.rs  fedi_fee.rs  lib.rs
crates/federations/src/federation_v2/: backup_service.rs  client.rs  db.rs  dev.rs  guardian_remittance.rs  ln_gateway_service.rs  lnurl_receives_service.rs  meta.rs  mod.rs  spv2_pay_address.rs  spv2_sweeper_service.rs  stability_pool_sweeper_service.rs
crates/federations/src/federation_v2/ln_ops/: mod.rs  router.rs  v1.rs  v2.rs
crates/federations/src/federation_v2/mint_ops/: mod.rs  v1.rs  v2.rs
crates/federations/src/federation_v2/wallet_ops/: mod.rs  v1.rs  v2.rs
crates/federations/src/fedi_fee/: app.rs  db.rs  guardian.rs  guardian_metadata.rs  mod.rs
crates/fedimint-cursed-redb/: Cargo.toml
crates/fedimint-cursed-redb/src/: lib.rs
crates/fedimint/devi/: Cargo.toml
crates/fedimint/devi/src/: devfed.rs  lib.rs  main.rs  nostr_relay.rs  synapse.rs
crates/fedimint/dvd-server/: Cargo.toml
crates/fedimint/dvd-server/src/: main.rs
crates/fedimint/fedimint-cli/: Cargo.toml
crates/fedimint/fedimint-cli/src/: main.rs
crates/fedimint/fedimintd/: Cargo.toml
crates/fedimint/fedimintd/src/: main.rs
crates/matrix/: Cargo.toml
crates/matrix/src/: lib.rs  types.rs
crates/multispend/: Cargo.toml
crates/multispend/src/: completion_notification_service.rs  db.rs  lib.rs  multispend_matrix.rs  rescanner.rs  services.rs  withdrawal_service.rs
crates/nostril/: Cargo.toml
crates/nostril/src/: lib.rs
crates/remote-server/: Cargo.toml
crates/remote-server/src/: main.rs
crates/rpc-types/: Cargo.toml
crates/rpc-types/src/: communities.rs  error.rs  event.rs  lib.rs  matrix.rs  multispend.rs  nostril.rs  sp_transfer.rs  spv2_transfer_meta.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: api.rs  bridge_runtime.rs  constants.rs  db.rs  envs.rs  event.rs  features.rs  lib.rs  observable.rs  rpc_stream.rs  serde.rs  storage.rs  ts.rs  utils.rs
crates/runtime/src/storage/: state.rs
crates/sp-transfer/: Cargo.toml
crates/sp-transfer/src/: lib.rs  sp_transfers_matrix.rs
crates/sp-transfer/src/db/: mod.rs  receiver.rs  sender.rs
crates/sp-transfer/src/services/: account_id_responder.rs  mod.rs  transfer_complete_notifier.rs  transfer_submitter.rs
devi/: Cargo.toml
devi/src/: main.rs
fedi-api-types/: Cargo.toml
fedi-bug-report/: Cargo.toml
fedi-core/: Cargo.toml
fedi-db-dump/: Cargo.toml
fedi-debug/: Cargo.toml
fedi-debug/src/: main.rs
fedi-social-client/: Cargo.toml
fedi-social-common/: Cargo.toml
fedi-social-server/: Cargo.toml
fedi-social-server/src/: lib.rs
fedimint-cli/: Cargo.toml
fedimint-cli/src/: main.rs
fedimintd/: Cargo.toml
fedimintd/src/: main.rs
misc/: mprocs-dev-ui.yaml  mprocs.yaml
modules/fedi-social/client/: Cargo.toml
modules/fedi-social/client/src/: api.rs  client.rs  lib.rs
nix/: flakebox.nix
scripts/: build-wasm.sh  build.sh  common.sh  enforce-nix-lint.sh  enforce-nix.sh  fd-limit.sh  install-xcode.sh  mprocs-user-shell.sh  mprocs.sh  prefetch.sh  provide-stable-liquidity.sh  run-ui.sh  test-bridge-all.sh  test-bridge-current.inner.sh  test-bridge-current.sh  test-bridge.sh  test-ci-all.sh  test-common.sh  test-fm-upstream-tests.sh  test-stability-pool-v2.sh  test-stability-pool.sh  tidy-up.sh
stability-pool/: README.md
stability-pool/stability-pool-client/: Cargo.toml
stability-pool/stability-pool-client/src/: lib.rs
stability-pool/stability-pool-common/: Cargo.toml
stability-pool/stability-pool-common/src/: config.rs  lib.rs
ui/: .eslintrc.js  .gitignore  .prettierrc.js  .syncpackrc  README.md  knip.ts  package.json  turbo.json
(+2127 files in other folders)
