[workspace]
members = [
  "bridge/fedi-ffi",
  "bridge/fedi-wasm",
  "bridge/ffi-bindgen",
  "crates/api-types",
  "crates/bridge",
  "crates/federations",
  "crates/matrix",
  "crates/multispend",
  "crates/sp-transfer",
  "crates/bug-report",
  "crates/communities",
  "crates/debug-tools",
  "crates/device-registration",
  "crates/env",
  "crates/fedimint/devi",
  "crates/fedimint/fedimint-cli",
  "crates/fedimint/fedimintd",
  "crates/modules/fedi-social/client",
  "crates/modules/fedi-social/common",
  "crates/modules/fedi-social/server",
  "crates/modules/stability-pool-old/client",
  "crates/modules/stability-pool-old/common",
  "crates/modules/stability-pool-old/server",
  "crates/modules/stability-pool-old/tests",
  "crates/modules/stability-pool/client",
  "crates/modules/stability-pool/common",
  "crates/modules/stability-pool/server",
  "crates/modules/stability-pool/tests",
  "crates/nostril",
  "crates/redb-storage",
  "crates/remote-server",
  "crates/rpc-types",
  "crates/runtime",
]
resolver = "2"

[profile.release]
lto = "fat"
codegen-units = 1
# we need debug symbols for debugging panics and such, at least on the backend
# if don't need them *somewhere*, we should manually call `strip` after the binary
# is built
debug = "line-tables-only"
opt-level = "z"
strip = false

[workspace.metadata]
authors = ["The Fedi Developers"]
edition = "2024"
description = "Fedi"
documentation = "https://github.com/fedibtc/fedimintd-fedi"
readme = "README.md"
homepage = "https://fedi.xyz"
repository = "https://github.com/fedibtc/fedimintd-fedi"
license-file = "LICENSE"
keywords = ["bitcoin", "lightning", "chaumian", "e-cash", "federated"]

[workspace.dependencies]
base64 = "0.22"
base64-serde = "0.8.0"
bitcoin = { version = "0.32.4", features = ["rand", "serde"] }
bech32 = "0.11.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.139"
serde_with = "3.12.0"
subtle = "2.5.0"
ring = "0.17.14"
assert_matches = "1.5.0"

# fedi crates
api-types = { path = "crates/api-types" }
bridge = { path = "crates/bridge" }
federations = { path = "crates/federations" }
matrix = { path = "crates/matrix" }
bug-report = { path = "crates/bug-report" }
communities = { path = "crates/communities" }
debug-tools = { path = "crates/debug-tools" }
device-registration = { path = "crates/device-registration" }
env = { path = "crates/env" }
devi = { path = "crates/fedimint/devi" }
fedi-ffi = { path = "bridge/fedi-ffi" }
fedi-social-client = { path = "crates/modules/fedi-social/client" }
fedi-social-common = { path = "crates/modules/fedi-social/common" }
fedi-social-server = { path = "crates/modules/fedi-social/server" }
nostril = { path = "crates/nostril" }
stability-pool-client-old = { path = "crates/modules/stability-pool-old/client" }
stability-pool-common-old = { path = "crates/modules/stability-pool-old/common" }
stability-pool-server-old = { path = "crates/modules/stability-pool-old/server" }
stability-pool-tests-old = { path = "crates/modules/stability-pool-old/tests" }
stability-pool-client = { path = "crates/modules/stability-pool/client" }
stability-pool-common = { path = "crates/modules/stability-pool/common" }
stability-pool-server = { path = "crates/modules/stability-pool/server" }
stability-pool-tests = { path = "crates/modules/stability-pool/tests" }
redb-storage = { path = "crates/redb-storage" }
remote-server = { path = "crates/remote-server" }
rpc-types = { path = "crates/rpc-types" }
runtime = { path = "crates/runtime" }
sp-transfer = { path = "crates/sp-transfer" }

anyhow = "1"
async-stream = "0.3.5"
async-trait = "0.1.85"
bincode = "1.3.1"
bitcoin_hashes = "0.14.0"
clap = "4"
erased-serde = "0.4"
futures = "0.3"
getrandom = "0.3.1"
hex = { version = "0.4.2" }
imbl = "6"
impl-tools = "0.10.0"
itertools = "0.14"
nostr = { version = "0.44", default-features = false, features = [
  "std",
  "nip44",
  "nip98",
] }
nostr-sdk = { version = "0.44", features = ["nip44", "nip04"] }
rand = "0.8"
reqwest = { version = "0.12", features = [
  "json",
  "rustls-tls",
], default-features = false }
secp256k1 = { version = "0.29.0", default-features = false }
strum = "0.27"
strum_macros = "0.27"
thiserror = "2.0.8"
tempfile = "3.17.1"
tokio = "1"
ts-rs = "11"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
matrix-sdk-base = { git = "https://github.com/fedibtc/matrix-rust-sdk", tag = "fedi/matrix-sdk-ffi/20251118-3", default-features = false }
matrix-sdk = { git = "https://github.com/fedibtc/matrix-rust-sdk", tag = "fedi/matrix-sdk-ffi/20251118-3", default-features = false }
matrix-sdk-ui = { git = "https://github.com/fedibtc/matrix-rust-sdk", tag = "fedi/matrix-sdk-ffi/20251118-3", default-features = false }

fedimint_threshold_crypto = { version = "0.2.1", package = "fedimint-threshold-crypto" }

fedimintd = { git = "https://github.com/fedibtc/fedimint", tag = "v0.10.0-fedi6" }
fedimint-cli = { git = "https://github.com/fedibtc/fedimint", tag = "v0.10.0-fedi6" }
fedimint-build = { git = "https://github.com/fedibtc/fedimint", tag = "v0.10.0-fedi6" }
fedimint-core = { git = "https://github.com/fedibtc/fedimint", tag = "v0.10.0-fedi6" }
fedimint-connectors = { git = "https://github.com/fedibtc/fedimint", tag = "v0.10.0-fedi6" }
fedimint-server = { git = "https://github.com/fedibtc/fedimint", tag = "v0.10.0-fedi6" }
fedimint-server-core = { git = "https://github.com/fedibtc/fedimint", tag = "v0.10.0-fedi6" }
fedimint-client = { git = "https://github.com/fedibtc/fedimint", tag = "v0.10.0-fedi6" }
fedimint-client-module = { git = "https://github.com/fedibtc/fedimint", tag = "v0.10.0-fedi6" }
fedimint-tbs = { git = "https://github.com/fedibtc/fedimint", tag = "v0.10.0-fedi6" }
fedimint-api-client = { git = "https://github.com/fedibtc/fedimint", tag = "v0.10.0-fedi6" }
fedimint-derive-secret = { git = "https://github.com/fedibtc/fedimint", tag = "v0.10.0-fedi6" }
fedimint-mint-client = { git = "https://github.com/fedibtc/fedimint", tag = "v0.10.0-fedi6" }
fedimint-wallet-client = { git = "https://github.com/fedibtc/fedimint", tag = "v0.10.0-fedi6" }
fedimint-ln-client = { git = "https://github.com/fedibtc/fedimint", tag = "v0.10.0-fedi6" }
fedimint-ln-common = { git = "https://github.com/fedibtc/fedimint", tag = "v0.10.0-fedi6" }
fedimint-meta-client = { git = "https://github.com/fedibtc/fedimint", tag = "v0.10.0-fedi6" }
fedimint-aead = { git = "https://github.com/fedibtc/fedimint", tag = "v0.10.0-fedi6" }
fedimint-rocksdb = { git = "https://github.com/fedibtc/fedimint", tag = "v0.10.0-fedi6" }
fedimint-bip39 = { git = "https://github.com/fedibtc/fedimint", tag = "v0.10.0-fedi6" }
fedimint-logging = { git = "https://github.com/fedibtc/fedimint", tag = "v0.10.0-fedi6" }
fedimint-portalloc = { git = "https://github.com/fedibtc/fedimint", tag = "v0.10.0-fedi6" }
fedimint-cursed-redb = { git = "https://github.com/fedibtc/fedimint", tag = "v0.10.0-fedi6" }
devimint = { git = "https://github.com/fedibtc/fedimint", tag = "v0.10.0-fedi6" }
ln-gateway = { git = "https://github.com/fedibtc/fedimint", tag = "v0.10.0-fedi6" }


# Uncomment these to use local fedimint v2
# fedimintd = { path = "../fedimint/fedimintd" }
# fedimint-cli = { path = "../fedimint/fedimint-cli" }
# fedimint-build = { path = "../fedimint/fedimint-build" }
# fedimint-core = { path = "../fedimint/fedimint-core" }
# fedimint-server = { path = "../fedimint/fedimint-server" }
# fedimint-server-core = { path = "../fedimint/fedimint-server-core" }
# fedimint-client = { path = "../fedimint/fedimint-client" }
# fedimint-client-module = { path = "../fedimint/fedimint-client-module" }
# fedimint-api-client = { path = "../fedimint/fedimint-api-client" }
# fedimint-tbs = { path = "../fedimint/crypto/tbs" }
# fedimint-derive-secret = { path = "../fedimint/crypto/derive-secret" }
# fedimint-mint-client = { path = "../fedimint/modules/fedimint-mint-client" }
# fedimint-wallet-client = { path = "../fedimint/modules/fedimint-wallet-client" }
# fedimint-ln-client = { path = "../fedimint/modules/fedimint-ln-client" }
# fedimint-ln-common = { path = "../fedimint/modules/fedimint-ln-common" }
# fedimint-meta-client = { path = "../fedimint/modules/fedimint-meta-client" }
# fedimint-client-legacy = { path = "../fedimint/fedimint-client-legacy" }
# fedimint-aead = { path = "../fedimint/crypto/aead" }
# fedimint-rocksdb = { path = "../fedimint/fedimint-rocksdb" }
# fedimint-bip39 = { path = "../fedimint/fedimint-bip39" }
# fedimint-logging = { path = "../fedimint/fedimint-logging" }
# fedimint-portalloc = { path = "../fedimint/fedimint-portalloc" }
# devimint = { path = "../fedimint/devimint" }
# ln-gateway = { path = "../fedimint/gateway/ln-gateway" }

[profile.dev]
debug = "line-tables-only"
incremental = false
opt-level = 1

# in dev mode optimize crates that are perf-critical (usually just crypto crates)
[profile.dev.package]
secp256k1 = { opt-level = 3 }
secp256k1-sys = { opt-level = 3 }
bitcoin_hashes = { opt-level = 3 }
ff = { opt-level = 3 }
group = { opt-level = 3 }
pairing = { opt-level = 3 }
rand_core = { opt-level = 3 }
byteorder = { opt-level = 3 }
zeroize = { opt-level = 3 }
bls12_381 = { opt-level = 3 }
subtle = { opt-level = 3 }
ring = { opt-level = 3 }
fedimint-threshold-crypto = { opt-level = 3 }
# new names - needed when we update fedimint again to include
# https://github.com/fedimint/fedimint/pull/6578
tikv-jemalloc-sys = { opt-level = 3 }
tikv-jemallocator = { opt-level = 3 }

# ios gets its own profile since it crashes on opt-level 0
[profile.dev-ios]
inherits = "dev"
opt-level = 1

[profile.ci]
inherits = "dev"
debug = "line-tables-only"
incremental = false

# Workaround: https://github.com/rust-lang/cargo/issues/12457 which causes
#             https://github.com/ipetkov/crane/issues/370
[profile.dev.build-override]
debug = false
[profile.ci.build-override]
debug = false
[profile.release.build-override]
debug = false

[patch.crates-io]
# https://github.com/mozilla/uniffi-rs/issues/1938
uniffi = { git = "https://github.com/mozilla/uniffi-rs", rev = "f5fc9d7e9aa08889aedc45dd81ae9b4d3ec4cbe8" }
iroh = { git = "https://github.com/fedibtc/iroh", branch = "ma/0.35.0-no-holepunch" }
iroh-base = { git = "https://github.com/fedibtc/iroh", branch = "ma/0.35.0-no-holepunch" }
iroh-relay = { git = "https://github.com/fedibtc/iroh", branch = "ma/0.35.0-no-holepunch" }
# matrix sdk needs fork of indexed_db_futures
indexed_db_futures = { git = "https://github.com/fedibtc/rust-indexed-db", tag = "0.6.4-fedi1" }
