[package]
name = "fedi-debug"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fedimint-rocksdb = { workspace = true }
fedimint-core = { workspace = true }
fedi-bug-report = { path = "../fedi-bug-report" }
clap = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
