[package]
name = "fedi-social-server"
version = "0.3.0"
authors = ["The Fedimint Developers"]
edition = "2021"
description = "fedi-social is a Fedi's social backup&recovery module."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "fedi_social_server"
path = "src/lib.rs"

[dependencies]
fedimint-aead = { workspace = true }
anyhow = "1.0.66"
async-trait = "0.1"
bincode = "1.3.1"
bitcoin_hashes = "0.11.0"
erased-serde = "0.4"
futures = "0.3"
hex = { version = "0.4.2", features = ["serde"] }
itertools = "0.10.5"
fedimint-core = { workspace = true }
fedimint-server = { workspace = true }
fedi-social-common = { path = "../fedi-social-common" }
rand = "0.8"
secp256k1 = "0.24.2"
secp256k1-zkp = "0.7.0"
serde = { version = "1.0.149", features = ["derive"] }
strum = "0.24"
strum_macros = "0.24"
thiserror = "1.0.37"
fedimint_threshold_crypto = { workspace = true }
tracing = "0.1.37"
impl-tools = "0.6.1"

[dev-dependencies]
rand = "0.8"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
test-log = { version = "0.2", features = ["trace"], default-features = false }
