[package]
name = "fedi-fedimint-cli"
version = "0.3.0"
authors = ["The Fedi Developers"]
edition = "2021"
description = "fedimintd with custom fedi modules"

[[bin]]
name = "fedimint-cli"
path = "src/main.rs"


[dependencies]
anyhow = { workspace = true }
fedimint-cli = { workspace = true }
tokio = { workspace = true, features = ["full", "tracing"] }
stability-pool-client-old = { path = "../modules/stability-pool-old/client" }
stability-pool-client = { path = "../modules/stability-pool/client" }
fedi-social-client = { path = "../modules/fedi-social/client" }

[build-dependencies]
fedimint-build = { workspace = true }
