[package]
name = "fedi-fedimintd"
version = "0.3.0"
authors = ["The Fedi Developers"]
edition = "2021"
description = "fedimintd with custom fedi modules"

[[bin]]
name = "fedimintd"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
fedimintd = { workspace = true }
tokio = { workspace = true, features = ["full", "tracing"] }
fedi-core = { workspace = true }
fedi-social-server = { path = "../modules/fedi-social/server" }
fedi-social-common = { path = "../modules/fedi-social/common" }
fedimint-core = { workspace = true }
stability-pool-server-old = { path = "../modules/stability-pool-old/server" }
stability-pool-server = { path = "../modules/stability-pool/server" }
tracing = { workspace = true }

[build-dependencies]
fedimint-build = { workspace = true }
