[package]
name = "fedi-ffi"
version = "0.3.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
name = "fediffi"

# TODO: remove after uniffi upgraded
# https://github.com/mozilla/uniffi-rs/issues/2346
[lints.clippy]
empty-line-after-doc-comments = "allow"

[dependencies]
fedi-api-types = { workspace = true }
fedi-core = { workspace = true }
fedimint-core = { workspace = true }
fedimint-client = { workspace = true }
fedimint-tbs = { workspace = true }
fedimint-mint-client = { workspace = true }
fedimint-ln-client = { workspace = true }
fedimint-api-client = { workspace = true }
fedimint-ln-common = { workspace = true }
fedimint-wallet-client = { workspace = true }
fedimint-meta-client = { workspace = true }
fedi-social-client = { workspace = true }
stability-pool-client-old = { path = "../../modules/stability-pool-old/client" }
stability-pool-client = { path = "../../modules/stability-pool/client" }
fedi-bug-report = { path = "../../fedi-bug-report" }
fedimint-derive-secret = { workspace = true }
fedimint-logging = { workspace = true }
fedimint-bip39 = { workspace = true }
fedimint_threshold_crypto = { workspace = true }
fedimint-aead = { workspace = true }

anyhow = { workspace = true }
bip39 = { version = "2.0.0", features = ["rand"] }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
bech32 = { workspace = true }
bitcoin = { workspace = true }
lazy_static = "1.4.0"
lightning-invoice = "0.32.0"
futures = "0.3"
tracing = { workspace = true }
tracing-serde = "0.1.3"
thiserror = "2.0.8"
hex = { workspace = true }
macro_rules_attribute = "0.1.3"
mime = "0.3.17"
ts-rs = "10"
async-trait = { workspace = true }
tokio = { workspace = true, features = ["time", "macros"] }
url = "2.3.1"
reqwest = { workspace = true }
rolling-file = "0.2.0"
tracing-appender = "0.2.2"
matrix-sdk-ui = { git = "https://github.com/fedibtc/matrix-rust-sdk", tag = "fedi-0.10.0", default-features = false, features = [
] }
matrix-sdk = {  git = "https://github.com/fedibtc/matrix-rust-sdk", tag = "fedi-0.10.0", default-features = false, features = [
    "js",
    "indexeddb",
    "rustls-tls",
    "e2e-encryption",
] }
imbl = { version = "4", features = ["serde"] }
serde_with = "3.12.0"
eyeball-im = "0.6"
tempfile = "3.17.1"
slab = "0.4.9"
eyeball = "0.8.7"
async-recursion = "1.1.0"
tokio-stream = { version = "0.1.17", features = ["sync"] }

[target.'cfg(target_family = "wasm")'.dependencies]
ring = { version = "0.17.14", features = ["wasm32_unknown_unknown_js"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
fedimint-rocksdb = { workspace = true }
tokio-util = { version = "0.7.9", features = ["codec", "net"] }
tracing-subscriber = { version = "0.3.1", features = ["env-filter", "json"] }
uniffi = { version = "0.25.3" }
matrix-sdk = { git = "https://github.com/fedibtc/matrix-rust-sdk", tag = "fedi-0.10.0", default-features = false, features = [
    "sqlite",
] }
rusqlite = { version = "*" }

# we don't have an easy way to get static sqlite for android targets
# so we enable bundled feature when compiling for it
[target.'cfg(target_os = "android")'.dependencies]
rusqlite = { version = "*", features = ["bundled"] }

[build-dependencies]
uniffi = { version = "0.25.3", features = ["build"] }
fedimint-build = { workspace = true }

[dev-dependencies]
tempfile = "3.17.1"
mockito = "1.4.0"
clap = { workspace = true }

# FIXME: just put these above? or dev-dependencies
[target.'cfg(target_os = "macos")'.dependencies]
fedimint-logging = { workspace = true }
devimint = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
fedimint-logging = { workspace = true }
devimint = { workspace = true }
